cleaned up dependencies and removed unnecessary stuff